[project]
version = "0.2.1"
name = "rdbbeat"
description = "A SQLAlchemy-based scheduler for celery-beat."
readme = "README.md"
authors = [{ name = "Aruba UXI" }]
requires-python = ">=3.8"
dependencies = [
    "celery~=5.2",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "python-dotenv",
    "pytz",
    "markupsafe<3.0",
]
